# accu-on-sea-2026-modular-physics

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
core/: component.hpp  dual.hpp  scalar.hpp  solver.hpp  state_function_tags.hpp  typed_component.hpp  units.hpp
examples/: oscillator_demo.cpp
physics/coupled_oscillator/: coupled_system.hpp  energy_monitor.hpp  point_mass.hpp  spring.hpp  tags.hpp
scripts/: code_snippets.py  make_plot.py  update_code_slides.py
slides/: ACCU-Separation-of-Concerns-at-Zero-Cost.pptx  SLIDES.md
